@startuml

top to bottom direction

class Candidate {
  - schoolId: String
  - grade: String
  - firstName: String
  - lastName: String
  - pathOfImage: String
}

class Block {
    - index: int
    - timeStamp: Long
    - voted: Candidate
    - hash: String
    - currentBlockHash: String
    - voterUUID: UUID
}

class Blockchain {
    - filePath: String
    - chain: List<Block>
}

class Election {
  - name: String
  - electionStart: LocalDateTime
  - electionEnd: LocalDateTime
  - electionType: String
  - blockchainFilename: String
  - participatingCandidates: List<Candidate>
}

class Email {
  - email: String
  - election: Election
}

class Voter {
  - generatedId: Long
  - election: Election
}

Election "1"--"1" Blockchain
Election "1"--"*" Email
Blockchain "1"--"*" Block
Candidate "1"--"*" Block
Voter "*"--"*" Election
@enduml
